finish html and css

--- a/index.html
+++ b/index.html
@@ -10,17 +10,24 @@
 <body>
 <h1>Calculator</h1>
 <div id="calculator-container">
-    <div>screen</div>
-    <a href="#">7</a>
-    <a href="#">8</a>
-    <a href="#">9</a>
-    <a href="#">4</a>
-    <a href="#">5</a>
-    <a href="#">6</a>
-    <a href="#">1</a>
-    <a href="#">2</a>
-    <a href="#">3</a>
-    <a href="#">0</a>
+    <div id="screen-operation">/</div>
+    <div id="screen-secondary">test</div>
+    <div id="screen-primary">test</div>
+    <a class="number-button button" id="seven" data-item="7" href="#">7</a>
+    <a class="number-button button" id="eight" data-item="8" href="#">8</a>
+    <a class="number-button button" id="nine" data-item="9" href="#">9</a>
+    <a class="number-button button" id="four" data-item="4" href="#">4</a>
+    <a class="number-button button" id="five" data-item="5" href="#">5</a>
+    <a class="number-button button" id="six" data-item="6" href="#">6</a>
+    <a class="number-button button" id="one" data-item="1" href="#">1</a>
+    <a class="number-button button" id="two" data-item="2" href="#">2</a>
+    <a class="number-button button" id="three" data-item="3" href="#">3</a>
+    <a class="number-button button" id="zero" data-item="0" href="#">0</a>
+    <a class="function-button button" id="plus" href="#">+</a>
+    <a class="function-button button" id="minus" href="#">-</a>
+    <a class="function-button button" id="divide" href="#">/</a>
+    <a class="function-button button" id="multiply" href="#">*</a>
+    <a class="function-button button" id="enter" href="#">enter</a>
 </div>
 
     <script src="script.js"></script>
