fill out javascript

--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 <body>
 <h1>Calculator</h1>
 <div id="calculator-container">
-    <div id="screen-operation">/</div>
-    <div id="screen-secondary">test</div>
-    <div id="screen-primary">test</div>
+    <div id="screen-operation"></div>
+    <div id="screen-secondary"></div>
+    <div id="screen-primary"></div>
     <a class="number-button button" id="seven" data-item="7" href="#">7</a>
     <a class="number-button button" id="eight" data-item="8" href="#">8</a>
     <a class="number-button button" id="nine" data-item="9" href="#">9</a>
@@ -27,7 +27,9 @@
     <a class="function-button button" id="minus" href="#">-</a>
     <a class="function-button button" id="divide" href="#">/</a>
     <a class="function-button button" id="multiply" href="#">*</a>
-    <a class="function-button button" id="enter" href="#">enter</a>
+    <a class="enter-button button" id="enter" href="#">enter</a>
+    <a class="clear-button button" id="clear" href="#">clear</a>
+
 </div>
 
     <script src="script.js"></script>
